# IDA-VTableExplorer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
docker/: Makefile
scripts/: test_json_export.py  vtable_explorer.py
src/: inheritance_graph.h  main.cpp  rtti_detector.h  rtti_parser.h  smart_annotator.h  vtable_chooser.h  vtable_comparison.h  vtable_detector.h  vtable_idc.h  vtable_json.h  vtable_utils.h
